# cli-frp

./: .pre-commit-config.yaml  CLAUDE.md  README.md  SETUP_SUMMARY.md  install_frp.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-quickstart.md  01-installation.md  02-basic-usage.md  03-advanced-usage.md  04-troubleshooting.md
docs/architecture/: domain-model.md  functional-design.md  practical-design.md  project-structure.md
docs/k8s/: crd-design.md
docs/patterns/: pipeline.md
docs/qna/: 00-overview.md  checkpoint-01-process-manager.md  checkpoint-02-basic-client.md  checkpoint-03-tunnel-management.md  checkpoint-04-path-routing.md  checkpoint-05-context-manager.md  checkpoint-06-server-wrapper.md  circular-dependency-protocol-pattern.md
docs/research/: README.md  frp-limitations-workarounds.md  k8s-operator-patterns.md
docs/spec/: 00-overview.md  01-api-spec.md  02-protocol.md  03-configuration.md  04-security.md
plan/: 01-architecture.md  02-implementation.md  03-milestones.md  README.md
plan/checkpoints/: checkpoint-01-process-manager.md  checkpoint-02-basic-client.md  checkpoint-03-tunnel-management.md  checkpoint-04-path-routing.md  checkpoint-05-context-manager.md  checkpoint-06-server-tools.md  checkpoint-07-monitoring.md  checkpoint-08-examples-docs.md  checkpoint-09-cli-interface.md  checkpoint-10-tui-interface.md  checkpoint-11-server-tools.md  checkpoint-12-k8s-distributed-system.md  checkpoint-improvements.md
scripts/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  frps.toml.template  install-frp-server.sh  setup-ssl.sh  supervisord.conf
src/frp_wrapper/: README.md  __init__.py  api.py  client.py  config.py  exceptions.py  path_routing.py  (+5 more)
tests/: __init__.py  conftest.py  test_api.py  test_client.py  test_client_integration.py  test_client_tunnel_integration.py  test_config.py  test_context_config.py  test_context_manager.py  test_installer.py  test_logging.py  test_path_routing.py  test_process.py  test_process_integration.py  test_server.py  test_server_config.py  test_server_integration.py  test_server_manager.py  test_server_process.py  test_ssl_manager.py  test_tunnel.py  test_tunnel_group.py  test_tunnel_integration.py  test_tunnel_manager.py  test_tunnel_manager_coverage.py  test_tunnel_manager_process.py  test_tunnel_process.py  test_utils.py
(+68 files in other folders)
