[build-system]
requires = ["uv_build>=0.7.3,<0.8"]
build-backend = "uv_build"

[project]
name = "frp-wrapper"
version = "0.1.0"
description = "A self-hostable tunneling solution leveraging FRP's native locations feature"
readme = "README.md"
authors = [
    { name = "Your Name", email = "cagojeiger@naver.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-watch>=4.2",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0", # For Jupyter support
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PL",   # pylint
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "PLR0913",  # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "PLC0415"]
"src/frp_wrapper/client.py" = ["PLR2004"]
"src/frp_wrapper/config.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--cov=src/frp_wrapper",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "asyncio: marks tests as async tests",
]

[dependency-groups]
dev = [
    "tomli>=2.2.1",
]
